--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ POSTGRES_PRISMA_URL=postgresql://root:password@localhost:5432/clubdev-db-v1?sche
 
 
 # Optional variables
-GEMINI_API_KEY=AIzaSyBi6HqVIVu9uoG53bb4emq6__SBlIcUq_0
+GEMINI_API_KEY=
 
 
 # Public variables
