--- a/.env
+++ b/.env
@@ -7,11 +7,8 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 NEXTAUTH_SECRET=your_nextauth_secret_here
 POSTGRES_PRISMA_URL=postgresql://root:password@localhost:5432/clubdev-db-v1?schema=public
 
-
-
 # Optional variables
-GEMINI_API_KEY=
-
+GEMINI_API_KEY=AIzaSyBi6HqVIVu9uoG53bb4emq6__SBlIcUq_0
 
 # Public variables
 NEXT_PUBLIC_SITE_NAME=ClubDev
