--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "club-dev-v1",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,11 +11,13 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "prisma": "prisma",
+    "migrate": "prisma migrate dev",
+    "studio": "prisma studio",
     "generate": "prisma generate",
+    "seed": "tsx prisma/seed.ts",
     "format": "prettier --write .",
     "lint:fix": "eslint --fix .",
     "analyze": "next build && next analyze"
-
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
@@ -47,7 +50,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.17.19",
     "@types/react": "^18.2.64",
     "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18.2.21",
@@ -58,6 +61,8 @@
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
